--- a/admin/style1.css
+++ b/admin/style1.css
@@ -43,18 +43,10 @@ font-family: 'Poppins', sans-serif;
 
 }
 .abc{
-    
-    padding: 1rem !important;
+    padding:1rem !important;
     width: 70%;
-    height: 1.5rem;
-    background-color: darkgrey;
-    outline: none;
-    border-left: hidden;
-    border: #a9a9a90f;
-    font-size: 20px;
-    color: skyblue;
+    height: 2vh;
 }
-
 .select-username{
     margin-bottom: 0.625rem;
     text-transform: uppercase;
@@ -71,5 +63,5 @@ font-family: 'Poppins', sans-serif;
 }
 .container .btn{
     width: 70%;
-    height: 1.5rem;
+    height: 1rem;
 }
